--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,7 +20,8 @@
     <meta name="twitter:description" content="Ignite Innovation, Transform Possibilities, and Elevate Your Experience in the Digital Era!" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/assets/images/zilotech-favicon-bgtransparent.png" type="image/png" />
+    <link rel="shortcut icon" href="/assets/images/zilotech-favicon-bgtransparent.png" type="image/png" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
