hero section enhanced

--- a/index.html
+++ b/index.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZiloTech - Zeal Fuels Innovation</title>
-    <meta name="description" content="Ignite Innovation, Transform Possibilities, and Elevate Your Experience in the Digital Era!" />
-    <meta name="author" content="ZiloTech" />
-    <meta name="keywords" content="technology, innovation, web development, mobile apps, UI/UX design, SEO, ZiloTech, Cameroon" />
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="ZiloTech - Zeal Fuels Innovation" />
-    <meta property="og:description" content="Ignite Innovation, Transform Possibilities, and Elevate Your Experience in the Digital Era!" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://zilotech.org" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ZiloTech - Zeal Fuels Innovation</title>
+  <meta name="description"
+    content="Ignite Innovation, Transform Possibilities, and Elevate Your Experience in the Digital Era!" />
+  <meta name="author" content="ZiloTech" />
+  <meta name="keywords"
+    content="technology, innovation, web development, mobile apps, UI/UX design, SEO, ZiloTech, Cameroon" />
 
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ZiloTech - Zeal Fuels Innovation" />
-    <meta name="twitter:description" content="Ignite Innovation, Transform Possibilities, and Elevate Your Experience in the Digital Era!" />
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="ZiloTech - Zeal Fuels Innovation" />
+  <meta property="og:description"
+    content="Ignite Innovation, Transform Possibilities, and Elevate Your Experience in the Digital Era!" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://zilotech.org" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="/assets/images/zilotech-favicon-bgtransparent.png" type="image/png" />
-    <link rel="shortcut icon" href="/assets/images/zilotech-favicon-bgtransparent.png" type="image/png" />
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="ZiloTech - Zeal Fuels Innovation" />
+  <meta name="twitter:description"
+    content="Ignite Innovation, Transform Possibilities, and Elevate Your Experience in the Digital Era!" />
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="icon" href="/assets/images/zilotech-favicon-bgtransparent.png" type="image/png" />
+  <link rel="shortcut icon" href="/assets/images/zilotech-favicon-bgtransparent.png" type="image/png" />
 
-    <!-- Preload critical resources -->
-    <link rel="preload" href="/src/main.tsx" as="script" />
-  </head>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Preload critical resources -->
+  <link rel="preload" href="/src/main.tsx" as="script" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
